@@ -1,42 +1,42 @@
 package algorithmSettings;
 
 import java.util.Base64;
-import java.util.Base64.Decoder;
-import java.util.Base64.Encoder;
 
 /**
- * 类名：Base64编码解码相关的代码
- * @author Jessie
+ * Base64 编码/解码工具（非加密，仅做二进制与字符串的转换）。
+ *
+ * @author jessie
  */
-public class Base64coder {
-	
-	/**
-	 * base64加密
-	 * 传入byte数组执行base64加密
-	 * @param data byte[] 数组待编码数据
-	 * @return String 编码后的字符串数据
-	 */
-	public static String encryptBASE64(byte[] data) {
-		// BASE64Encoder encoder = new BASE64Encoder();
-		// String encode = encoder.encode(data);
-		// 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Encoder
-		Encoder encoder = Base64.getEncoder();
-		String encode = encoder.encodeToString(data);
-		return encode;
+public final class Base64coder {
+
+	private Base64coder() {
+		// 工具类，禁止实例化
 	}
-	
+
 	/**
-	 * base64解密
-	 * 传入String执行base64解密
-	 * @param data String 编码数据 
-	 * @return byte[] 解码数据的数组
+	 * Base64 编码。
+	 *
+	 * @param data 待编码数据，可为 null（返回 null）
+	 * @return 编码后的字符串，data 为 null 时返回 null
 	 */
-	public static byte[] decryptBASE64(String data) {
-		// BASE64Decoder decoder = new BASE64Decoder();
-		// byte[] buffer = decoder.decodeBuffer(data);
-		// 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Decoder
-		Decoder decoder = Base64.getDecoder();
-		byte[] buffer = decoder.decode(data);
-		return buffer;
+	public static String encodeBase64(byte[] data) {
+		if (data == null) {
+			return null;
+		}
+		return Base64.getEncoder().encodeToString(data);
+	}
+
+	/**
+	 * Base64 解码。
+	 *
+	 * @param data Base64 字符串，可为 null（返回 null）
+	 * @return 解码后的字节数组，data 为 null 时返回 null
+	 * @throws IllegalArgumentException 当 data 不是合法 Base64 时
+	 */
+	public static byte[] decodeBase64(String data) {
+		if (data == null || data.isEmpty()) {
+			return null;
+		}
+		return Base64.getDecoder().decode(data);
 	}
 }
